<resources>

    <string name="kyc_loading_text">Processing</string>
    <string name="kyc_ok">Agree</string>
    <string name="kyc_close">Close</string>
    <string name="kyc_cancel">Cancel</string>
    <string name="kyc_notice">Notice</string>
    <string name="kyc_continue">Continue</string>
    <string name="kyc_try_again">Try  Again</string>
    <string name="kyc_camera_required_permission">You have to allow the camera permission to use this feature!</string>
    <string name="kyc_camera_go_to_app_settings">Go to setting</string>
    <string name="kyc_guide">Guide</string>
    <string name="kyc_auto_capture">Auto Capture</string>
    <string name="kyc_capture_id_card">Id-Card Capture</string>
    <string name="kyc_capture_face">Face Capture</string>
    <string name="kyc_record_face">Face Record</string>
    <string name="kyc_card_capture_notice_title">Id-Card Capture Guide</string>
    <string name="kyc_face_capture_notice_title">Guide for capturing faces</string>
    <string name="kyc_face_advanced_notice_title">Guide for capturing faces</string>

    <string name="kyc_card_display_abbr_CMND">CMND</string>
    <string name="kyc_card_display_CMND">Chứng minh nhân dân</string>
    <string name="kyc_card_display_abbr_CCCD">CCCD</string>
    <string name="kyc_card_display_CCCD">Căn cước công dân</string>
    <string name="kyc_card_display_abbr_CMQD">CMQĐ</string>
    <string name="kyc_card_display_CMQD">Chứng minh quân đội</string>
    <string name="kyc_card_display_HC">Hộ chiếu</string>
    <string name="kyc_card_display_abbr_BLX">BLX</string>
    <string name="kyc_card_display_BLX">Bằng lái xe</string>
    <string name="kyc_face_camera_guide">Đưa mặt vào khung hình</string>
    <string name="kyc_card_popup_guide1">Is original Card</string>
    <string name="kyc_card_popup_guide2">Do not use face Card</string>
    <string name="kyc_card_popup_guide3">Cards must not have cut corners, holes, or foreign objects inside</string>
    <string name="kyc_card_popup_guide4">Papers are not blurred, light or dark</string>
    <string name="kyc_understood">Got it</string>
    <string name="kyc_capture_back_card">Capture back card</string>
    <string name="kyc_front_card">Front Card</string>
    <string name="kyc_back_card">Back Card</string>
    <string name="kyc_face_guide_1">Capture directly</string>
    <string name="kyc_face_guide_2">Put whole face into frame</string>
    <string name="kyc_face_guide_3">Do not wear sun glasses</string>
    <string name="kyc_face_guide_4">Do not wear mask</string>
    <string name="kyc_face_state_1">Put your face in the frame</string>
    <string name="kyc_face_state_2">Ready to Capture</string>
    <string name="kyc_face_state_3">Move in</string>
    <string name="kyc_face_state_4">Move out</string>
    <string name="kyc_face_state_5">Too many faces detected</string>
    <string name="kyc_face_state_6">Please look directy</string>
    <string name="kyc_card_state_1">Move out</string>
    <string name="kyc_card_state_2">Move in</string>
    <string name="kyc_card_state_3">Wrong card</string>
    <string name="kyc_invalid_face_title">Not valid face</string>
    <string name="kyc_invalid_record_title">Not valid face</string>
    <string name="kyc_invalid_card_title">Not valid image</string>
    <string name="kyc_recapture">Recapture</string>
    <string name="kyc_rerecord">Record again</string>
    <string name="kyc_ic_face_left">Turn left</string>
    <string name="kyc_ic_face_right">Turn right</string>
    <string name="kyc_remaining_time">Recording"</string>
    <string name="kyc_limited_time">Exceed the limited capture time </string>
    <string name="kyc_move_out">Your face has moved out</string>
    <string name="kyc_keep_straight">Fixed your face</string>
    <string name="kyc_please_view_guide_video">Please watch the guide</string>
    <string name="kyc_view_guide_video">Watch guide</string>
    <string name="kyc_card_preview_notice">Make sure that the image is not blurred, light or dark</string>

    <string name="kyc_common_use_image">Use image</string>
    <string name="kyc_auto_flash">Flash</string>
    <string name="kyc_card_ready_to_capture">Maintain stabilization</string>
</resources>
