<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lnFaceGuide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/kyc_margin_padding_default_smaller"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/kyc_margin_padding_default"

            app:layout_constraintTop_toTopOf="parent">

            <com.fast.ekyc.ui.widget.AppBoldTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kyc_face_capture_notice_title"

                android:textColor="@color/kyc_color_black"
                android:textSize="@dimen/kyc_text_size_medium" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/lnFacePortrait"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/kyc_margin_padding_default">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/kyc_ic_face_guide_portrait" />

                <com.fast.ekyc.ui.widget.AppRegularTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/kyc_margin_padding_large"

                    android:text="@string/kyc_face_guide_1"
                    android:textColor="@color/kyc_color_black" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/kyc_margin_padding_default">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/kyc_ic_face_guide_inside" />

                <com.fast.ekyc.ui.widget.AppRegularTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/kyc_margin_padding_large"

                    android:text="@string/kyc_face_guide_2"
                    android:textColor="@color/kyc_color_black" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/kyc_margin_padding_default">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/kyc_ic_face_guide_no_glasses" />

                <com.fast.ekyc.ui.widget.AppRegularTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="@dimen/kyc_margin_padding_large"
                    android:text="@string/kyc_face_guide_3"
                    android:textColor="@color/kyc_color_black" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/kyc_margin_padding_default">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/kyc_ic_face_guide_no_mask" />

                <com.fast.ekyc.ui.widget.AppRegularTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/kyc_margin_padding_large"

                    android:text="@string/kyc_face_guide_4"
                    android:textColor="@color/kyc_color_black" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.fast.ekyc.ui.widget.AppButton
            android:id="@+id/btnUnderstand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/kyc_margin_padding_default_smaller"
            android:layout_marginTop="@dimen/kyc_margin_padding_default"
            android:layout_marginBottom="@dimen/kyc_margin_padding_medium"
            android:text="@string/kyc_understood"
            android:textAllCaps="false"
            android:textColor="@color/kyc_color_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lnFaceGuide" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>