<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lnContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/kyc_margin_padding_default_smaller"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/kyc_margin_padding_default_larger"
            android:paddingBottom="@dimen/kyc_margin_padding_medium"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="12dp">


            <com.fast.ekyc.ui.widget.AppBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/kyc_margin_padding_default_smaller"
                android:text="@string/kyc_card_capture_notice_title"
                android:textColor="@color/kyc_color_black"
                android:textSize="@dimen/kyc_text_size_medium" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivSample"
                android:layout_width="wrap_content"
                android:layout_height="112dp"
                android:layout_marginTop="@dimen/kyc_margin_padding_medium"
                tools:src="@drawable/kyc_sample_card_id" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/kyc_margin_padding_large"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivGuide1"
                    android:layout_width="75dp"
                    android:layout_height="49dp"
                    tools:srcCompat="@drawable/kyc_card_popup_guide1" />

                <com.fast.ekyc.ui.widget.AppRegularTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/kyc_margin_padding_default_larger"
                    android:text="@string/kyc_card_popup_guide1"
                    android:textColor="@color/kyc_color_black"
                    android:textSize="@dimen/kyc_text_size_normal"
                    android:textStyle="" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/kyc_margin_padding_medium"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivGuide2"
                    android:layout_width="75dp"
                    android:layout_height="49dp"
                    tools:srcCompat="@drawable/kyc_card_popup_guide2" />

                <com.fast.ekyc.ui.widget.AppRegularTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/kyc_margin_padding_default_larger"

                    android:text="@string/kyc_card_popup_guide2"
                    android:textColor="@color/kyc_color_black"
                    android:textSize="@dimen/kyc_text_size_normal" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/kyc_margin_padding_medium"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivGuide3"
                    android:layout_width="75dp"
                    android:layout_height="49dp"
                    app:srcCompat="@drawable/kyc_card_popup_guide3" />

                <com.fast.ekyc.ui.widget.AppRegularTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/kyc_margin_padding_default_larger"

                    android:text="@string/kyc_card_popup_guide3"
                    android:textColor="@color/kyc_color_black"
                    android:textSize="@dimen/kyc_text_size_normal" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/kyc_margin_padding_medium"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivGuide4"
                    android:layout_width="75dp"
                    android:layout_height="49dp"
                    tools:srcCompat="@drawable/kyc_card_popup_guide4" />

                <com.fast.ekyc.ui.widget.AppRegularTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/kyc_margin_padding_default_larger"

                    android:text="@string/kyc_card_popup_guide4"
                    android:textColor="@color/kyc_color_black"
                    android:textSize="@dimen/kyc_text_size_normal" />
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.fast.ekyc.ui.widget.AppButton
            android:id="@+id/btnUnderstand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/kyc_margin_padding_default_smaller"
            android:layout_marginTop="@dimen/kyc_margin_padding_default"
            android:layout_marginBottom="@dimen/kyc_margin_padding_medium"
            android:text="@string/kyc_understood"
            android:textAllCaps="false"
            android:textColor="@color/kyc_color_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lnContent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>