<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.fast.ekyc.ui.face.face_preview.FacePreviewViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/previewLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/kyc_face_overlay_color">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/bottomView"
            app:layout_constraintDimensionRatio="H,3:4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <com.fast.ekyc.ui.widget.overlay.FaceCameraOverlayView
            android:id="@+id/overlayView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/ivCard"
            app:layout_constraintTop_toTopOf="@id/ivCard" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/kyc_card_header_size"
            android:layout_marginTop="@dimen/kyc_margin_padding_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivClose"
                android:layout_width="@dimen/kyc_icon_size_large"
                android:layout_height="@dimen/kyc_icon_size_large"
                android:layout_marginStart="@dimen/kyc_margin_padding_default"
                android:background="@drawable/kyc_icon_state"
                android:padding="@dimen/kyc_margin_padding_tiny"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/kyc_ic_close" />

            <com.fast.ekyc.ui.widget.AppBoldTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/kyc_capture_face"
                android:textColor="@color/kyc_color_white"
                android:textSize="@dimen/kyc_text_size_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivGuide"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="@dimen/kyc_margin_padding_default"
                app:invisible="@{!viewModel.showHelp}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/kyc_bg_guide_icon"
                tools:visibility="visible" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cameraContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,1.02"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cameraContainer"
            app:layout_constraintVertical_bias="0.3"
            app:visible="@{viewModel.getState().isLoading()}">

            <com.fast.ekyc.ui.widget.ProgressView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.fast.ekyc.ui.widget.AppRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/kyc_margin_padding_tiny"
                android:text="@string/kyc_loading_text"

                android:textColor="@color/kyc_color_white" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lnPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/kyc_margin_padding_default"
            android:layout_marginBottom="@dimen/kyc_margin_padding_huge"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.fast.ekyc.ui.widget.AppButton
                    android:id="@+id/btnRecapture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/kyc_margin_padding_default"
                    android:layout_weight="1"
                    android:text="@string/kyc_recapture" />

                <com.fast.ekyc.ui.widget.AppButton
                    android:id="@+id/btnUseImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kyc_common_use_image" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:id="@+id/bottomView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/kyc_face_bottom_size"
            app:layout_constraintBottom_toBottomOf="parent">

        </View>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>